tests/error/import.py
import math

print math.typo
